--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: goreleaser
 
 on:
-  pull_request:
-  push:
-    tags:
-      - "*"
+  release:
+    types: [published, released]
 
 permissions:
   contents: write
